--- a/Eindopdracht/electroshop.css
+++ b/Eindopdracht/electroshop.css
@@ -3,16 +3,20 @@ body {
 	font-family: calibri;
 }
 
-.nav {
+.navdiv {
 	width: 100%;
-	float: left;
-	margin: 0 0 3em 0;
-	padding: 0;
+	height: 10%;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin: auto;
+    background-color:red;
+    float:left;
+}
+.nav {
 	list-style: none; 
-    position: fixed;
-    top: 0%;
-	left: 20%;
-	z-index: 1;
 }
 
 .nav li {
@@ -20,7 +24,7 @@ body {
 }
 
 .nav li a {
-	height: 25;
+	height: 25px;
 	display: block;
 	padding: 10px 18px;
 	text-decoration: none;
@@ -36,7 +40,42 @@ body {
 }
 
 .nav li a img {
-	width: 30;
-	height: 30;
+	width: 20px;
+	height: 20px;
 	
+}
+
+.schoolpicture {
+	height: auto;
+	width: 100%;
+}
+.contacttext {
+	text-align:left;
+	float: left;
+	width: auto;
+	margin-left:10px;
+	margin-right:10px;
+}
+.WebPage {
+	width: 35%;
+    position: absolute;
+    top:0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+	float:left;
+    margin: auto;
+    background-color:blue;
+}
+.picturediv {
+	text-align:left;
+	float: left;
+	width: auto;
+	margin-left:10px;
+	margin-right:10px;
+	width: 30%;
+}
+h1 {
+	margin-left:10px;
+	margin-right:10px;
 }
