--- a/Eindopdracht/electroshop.css
+++ b/Eindopdracht/electroshop.css
@@ -4,29 +4,32 @@ body {
 }
 
 .navdiv {
-	position: absolute;
-    left: 0;
+	position: fixed;
+    left: 10;
+    right: 0;
     top: 0;
     width: 100%;
     height: 10%;
-    margin: auto;
     background-color:red;
     text-align: center;
-}
-.nav {
-	list-style: none; 
-	display: inline-block; 
-	text-align: left;
+    float: left;
 }
 
-.nav li {
-	float: left; 
+.homepagediv {
+	float: left;
+	width: 10%;
+}
+.homepageicon {
+	width: auto;
+	height: 100%;
 }
 
-.nav li a {
-	height: 25px;
-	display: block;
-	padding: 10px 18px;
+
+
+.navdiv a {
+	float: left;
+	height: 100%;
+	width: 12%;
 	text-decoration: none;
 	font-weight: bold;
 	color: #069;
@@ -34,14 +37,13 @@ body {
   	background-color: #f2f2f2;
 }
 
-.nav li a:hover {
+.navdiv a:hover {
 	color: #c00;
 	background-color: #fff; 
 }
 
-.nav li a img {
-	width: 30px;
-	height: 30px;
+.navdiv a img {
+	height: 100%;
 	
 }
 
@@ -92,8 +94,21 @@ h1 {
 	font-weight: bold;
 }
 
+.footer {
+	position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    background-color: red;
+    color: white;
+    text-align: center;
+}
+
 .footercolumnleft {
 	float: left;
+	text-align: center;
+	width: 20%;
+	margin-left: 30%;
 }
 
 .footercolumnleft a {
@@ -101,9 +116,16 @@ h1 {
 }
 
 .footercolumnright {
+	float: left;
 	text-align: center;
+	width: 20%;
 }
 
 .footercolumnright a {
 	text-decoration: none;
+}
+
+.homepage {
+	float: left;
+	margin-top: 6%;
 }
